// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`disabled false 1`] = `
Object {
  "Constructor": "Dummy",
  "Options": Object {
    "ID": "component",
    "containerSelector": "body",
    "directives": Object {
      "disabled": [Function],
    },
    "disabled": false,
    "types": Array [],
  },
  "html": "<input>",
}
`;

exports[`disabled true 1`] = `
Object {
  "Constructor": "Dummy",
  "Options": Object {
    "ID": "component",
    "containerSelector": "body",
    "directives": Object {
      "disabled": [Function],
    },
    "disabled": true,
    "types": Array [],
  },
  "html": "<input disabled=\\"\\">",
}
`;

exports[`disabled update 1`] = `
Object {
  "Constructor": "Dummy",
  "Options": Object {
    "ID": "component",
    "containerSelector": "body",
    "directives": Object {
      "disabled": [Function],
    },
    "disabled": false,
    "types": Array [],
  },
  "html": "<input>",
}
`;

exports[`disabled update 2`] = `
Object {
  "Constructor": "Dummy",
  "Options": Object {
    "ID": "component",
    "containerSelector": "body",
    "directives": Object {
      "disabled": [Function],
    },
    "disabled": true,
    "types": Array [],
  },
  "html": "<input disabled=\\"\\">",
}
`;
